test/vlt/01-syntax/inv_name/inv_name.ml
let () = [%debug_log "msg" [%NAME 0]]
